PollTest: update to resolve poll test for sync.